# IT-360

./: .gitignore
HelloOpenGL/: README.txt  hello.py  requirements.txt
Homework 1/: Assignment_1_Ian_Rosenberg.py  Avgfilter.py  Circle.py  GaussSample.py  Grey.py  Laplace.py  README.txt  ScaleDown.py
OpenGL_Crowd_Sim_C++/: todo.txt
OpenGL_Crowd_Sim_C++/ex3/: README.txt  makefile
OpenGL_Crowd_Sim_C++/ex3/ex3/: ex3.psess  ex3.sln  ex3.vcxproj  ex3.vcxproj.filters
OpenGL_Crowd_Sim_C++/ex3/ex3/Debug/: NativeCodeAnalysis.read.1.tlog  ex3.ilk  main.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc141.idb
OpenGL_Crowd_Sim_C++/ex3/ex3/Debug/ex3.tlog/: CL.command.1.tlog  CL.write.1.tlog  ex3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_Crowd_Sim_C++/ex3/ex3/Release/: ex3.iobj  ex3.ipdb
OpenGL_Crowd_Sim_C++/ex3/ex3/Release/ex3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ex3.lastbuildstate  ex3.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_Crowd_Sim_C++/ex3/ex3/x64/Debug/: vc120.idb
OpenGL_Crowd_Sim_C++/ex3/ex3/x64/Debug/ex3.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  ex3.lastbuildstate
OpenGL_Crowd_Sim_C++/ex3/ex3/x64/Release/ex3.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  ex3.lastbuildstate
OpenGL_Crowd_Sim_C++/ex3/src/: CMakeLists.txt  jsfiddle.txt  main.cpp  makefile
